// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'graphql' keeps consumer-only cross-file targets unresolved while retaining local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
        ],
        "ruleId": "language.graphql.type.direct-definition",
        "stage": "syntax",
      },
      "filePath": "schema/user.graphql",
      "id": "edge:symbol%3Aschema%252Fuser.graphql%3Aschema%252Fuser.graphql%3Afile%3A0:symbol%3Aschema%252Fuser.graphql%3Aschema%252Fuser.graphql%2523type%253AUser%3Aclass%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 38,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "User",
      "resolution": "exact",
      "sourceId": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql:file:0",
      "targetId": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
    },
  ],
  "files": [
    {
      "contentHash": "b538a44ab06783f670388b2058470d82716d76d258dc808fe509f643e1121de0",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "graphql",
      "path": "schema/user.graphql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "schema/user.graphql",
      "id": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
      "isExported": true,
      "kind": "class",
      "name": "User",
      "qualifiedName": "schema/user.graphql#type:User",
      "range": {
        "end": {
          "column": 38,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "schema/user.graphql",
      "id": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "user.graphql",
      "qualifiedName": "schema/user.graphql",
      "range": {
        "end": {
          "column": 1,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'graphql' preserves applicable cross-file and local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql%23interface%3ANode:interface:0",
        ],
        "ruleId": "language.graphql.interface.direct-definition",
        "stage": "syntax",
      },
      "filePath": "schema/node.graphql",
      "id": "edge:symbol%3Aschema%252Fnode.graphql%3Aschema%252Fnode.graphql%3Afile%3A0:symbol%3Aschema%252Fnode.graphql%3Aschema%252Fnode.graphql%2523interface%253ANode%3Ainterface%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 27,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "Node",
      "resolution": "exact",
      "sourceId": "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql:file:0",
      "targetId": "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql%23interface%3ANode:interface:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql%23interface%3ANode:interface:0",
        ],
        "resolutionPath": [
          "schema/user.graphql",
          "schema/node.graphql",
        ],
        "ruleId": "module.graphql.unique-direct-interface-implementation",
        "stage": "module",
      },
      "filePath": "schema/user.graphql",
      "id": "edge:symbol%3Aschema%252Fuser.graphql%3Aschema%252Fuser.graphql%2523type%253AUser%3Aclass%3A0:symbol%3Aschema%252Fnode.graphql%3Aschema%252Fnode.graphql%2523interface%253ANode%3Ainterface%3A0:extends:1:22",
      "kind": "extends",
      "range": {
        "end": {
          "column": 26,
          "line": 1,
        },
        "start": {
          "column": 22,
          "line": 1,
        },
      },
      "referenceName": "Node",
      "resolution": "exact",
      "sourceId": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
      "targetId": "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql%23interface%3ANode:interface:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
        ],
        "ruleId": "language.graphql.type.direct-definition",
        "stage": "syntax",
      },
      "filePath": "schema/user.graphql",
      "id": "edge:symbol%3Aschema%252Fuser.graphql%3Aschema%252Fuser.graphql%3Afile%3A0:symbol%3Aschema%252Fuser.graphql%3Aschema%252Fuser.graphql%2523type%253AUser%3Aclass%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 38,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "User",
      "resolution": "exact",
      "sourceId": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql:file:0",
      "targetId": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
    },
  ],
  "files": [
    {
      "contentHash": "178995d15ca8ba6bd8ee912ce995ab553b124b449812cf7df2acb6b2a7f711ed",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "graphql",
      "path": "schema/node.graphql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "b538a44ab06783f670388b2058470d82716d76d258dc808fe509f643e1121de0",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "graphql",
      "path": "schema/user.graphql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "schema/node.graphql",
      "id": "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql%23interface%3ANode:interface:0",
      "isExported": true,
      "kind": "interface",
      "name": "Node",
      "qualifiedName": "schema/node.graphql#interface:Node",
      "range": {
        "end": {
          "column": 27,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "schema/node.graphql",
      "id": "symbol:schema%2Fnode.graphql:schema%2Fnode.graphql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "node.graphql",
      "qualifiedName": "schema/node.graphql",
      "range": {
        "end": {
          "column": 1,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "schema/user.graphql",
      "id": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql%23type%3AUser:class:0",
      "isExported": true,
      "kind": "class",
      "name": "User",
      "qualifiedName": "schema/user.graphql#type:User",
      "range": {
        "end": {
          "column": 38,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "schema/user.graphql",
      "id": "symbol:schema%2Fuser.graphql:schema%2Fuser.graphql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "user.graphql",
      "qualifiedName": "schema/user.graphql",
      "range": {
        "end": {
          "column": 1,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'proto' keeps consumer-only cross-file targets unresolved while retaining local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
        ],
        "ruleId": "language.proto.rpc.direct-service-member",
        "stage": "syntax",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%3Ainterface%3A0:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%253A%253ASay%3Amethod%3A0:contains:4:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 49,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 4,
        },
      },
      "referenceName": "Say",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
      "targetId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
        ],
        "ruleId": "language.proto.service.direct-definition",
        "stage": "syntax",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%3Afile%3A0:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%3Ainterface%3A0:contains:3:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 2,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
      "referenceName": "Greeter",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto:file:0",
      "targetId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
    },
  ],
  "files": [
    {
      "contentHash": "041bb7538318819252046dba1c4f7d217a3d6259f373ab7310c5aef2641805d7",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "proto",
      "path": "api/service.proto",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
      "isExported": false,
      "kind": "method",
      "name": "Say",
      "qualifiedName": "api/service.proto#service:Greeter::Say",
      "range": {
        "end": {
          "column": 49,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
      "isExported": true,
      "kind": "interface",
      "name": "Greeter",
      "qualifiedName": "api/service.proto#service:Greeter",
      "range": {
        "end": {
          "column": 2,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto:file:0",
      "isExported": true,
      "kind": "file",
      "name": "service.proto",
      "qualifiedName": "api/service.proto",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'proto' preserves applicable cross-file and local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloRequest:class:0",
        ],
        "ruleId": "language.proto.message.direct-definition",
        "stage": "syntax",
      },
      "filePath": "api/messages.proto",
      "id": "edge:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%3Afile%3A0:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%2523message%253AHelloRequest%3Aclass%3A0:contains:2:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 24,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
      "referenceName": "HelloRequest",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto:file:0",
      "targetId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloRequest:class:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloResponse:class:0",
        ],
        "ruleId": "language.proto.message.direct-definition",
        "stage": "syntax",
      },
      "filePath": "api/messages.proto",
      "id": "edge:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%3Afile%3A0:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%2523message%253AHelloResponse%3Aclass%3A0:contains:3:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 25,
          "line": 3,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
      "referenceName": "HelloResponse",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto:file:0",
      "targetId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloResponse:class:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloRequest:class:0",
        ],
        "resolutionPath": [
          "api/service.proto",
          "api/messages.proto",
        ],
        "ruleId": "module.proto.unique-imported-rpc-request-message-reference",
        "stage": "module",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%253A%253ASay%3Amethod%3A0:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%2523message%253AHelloRequest%3Aclass%3A0:references:4:11",
      "kind": "references",
      "range": {
        "end": {
          "column": 23,
          "line": 4,
        },
        "start": {
          "column": 11,
          "line": 4,
        },
      },
      "referenceName": "HelloRequest",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
      "targetId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloRequest:class:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloResponse:class:0",
        ],
        "resolutionPath": [
          "api/service.proto",
          "api/messages.proto",
        ],
        "ruleId": "module.proto.unique-imported-rpc-response-message-reference",
        "stage": "module",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%253A%253ASay%3Amethod%3A0:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%2523message%253AHelloResponse%3Aclass%3A0:references:4:34",
      "kind": "references",
      "range": {
        "end": {
          "column": 47,
          "line": 4,
        },
        "start": {
          "column": 34,
          "line": 4,
        },
      },
      "referenceName": "HelloResponse",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
      "targetId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloResponse:class:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
        ],
        "ruleId": "language.proto.rpc.direct-service-member",
        "stage": "syntax",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%3Ainterface%3A0:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%253A%253ASay%3Amethod%3A0:contains:4:3",
      "kind": "contains",
      "range": {
        "end": {
          "column": 49,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 4,
        },
      },
      "referenceName": "Say",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
      "targetId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fmessages.proto:api%2Fmessages.proto:file:0",
        ],
        "resolutionPath": [
          "api/service.proto",
          "api/messages.proto",
        ],
        "ruleId": "syntax.proto.literal-import.unique-file",
        "stage": "module",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%3Afile%3A0:symbol%3Aapi%252Fmessages.proto%3Aapi%252Fmessages.proto%3Afile%3A0:imports:2:9",
      "kind": "imports",
      "range": {
        "end": {
          "column": 23,
          "line": 2,
        },
        "start": {
          "column": 9,
          "line": 2,
        },
      },
      "referenceName": "messages.proto",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto:file:0",
      "targetId": "symbol:api%2Fmessages.proto:api%2Fmessages.proto:file:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
        ],
        "ruleId": "language.proto.service.direct-definition",
        "stage": "syntax",
      },
      "filePath": "api/service.proto",
      "id": "edge:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%3Afile%3A0:symbol%3Aapi%252Fservice.proto%3Aapi%252Fservice.proto%2523service%253AGreeter%3Ainterface%3A0:contains:3:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 2,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
      "referenceName": "Greeter",
      "resolution": "exact",
      "sourceId": "symbol:api%2Fservice.proto:api%2Fservice.proto:file:0",
      "targetId": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
    },
  ],
  "files": [
    {
      "contentHash": "dc459253d07377b928502cde4990f42dd701fe38229c8e08eaae123c04010f2b",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "proto",
      "path": "api/messages.proto",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "041bb7538318819252046dba1c4f7d217a3d6259f373ab7310c5aef2641805d7",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "proto",
      "path": "api/service.proto",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "api/messages.proto",
      "id": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloRequest:class:0",
      "isExported": true,
      "kind": "class",
      "name": "HelloRequest",
      "qualifiedName": "api/messages.proto#message:HelloRequest",
      "range": {
        "end": {
          "column": 24,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/messages.proto",
      "id": "symbol:api%2Fmessages.proto:api%2Fmessages.proto%23message%3AHelloResponse:class:0",
      "isExported": true,
      "kind": "class",
      "name": "HelloResponse",
      "qualifiedName": "api/messages.proto#message:HelloResponse",
      "range": {
        "end": {
          "column": 25,
          "line": 3,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/messages.proto",
      "id": "symbol:api%2Fmessages.proto:api%2Fmessages.proto:file:0",
      "isExported": true,
      "kind": "file",
      "name": "messages.proto",
      "qualifiedName": "api/messages.proto",
      "range": {
        "end": {
          "column": 1,
          "line": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter%3A%3ASay:method:0",
      "isExported": false,
      "kind": "method",
      "name": "Say",
      "qualifiedName": "api/service.proto#service:Greeter::Say",
      "range": {
        "end": {
          "column": 49,
          "line": 4,
        },
        "start": {
          "column": 3,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto%23service%3AGreeter:interface:0",
      "isExported": true,
      "kind": "interface",
      "name": "Greeter",
      "qualifiedName": "api/service.proto#service:Greeter",
      "range": {
        "end": {
          "column": 2,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 3,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "api/service.proto",
      "id": "symbol:api%2Fservice.proto:api%2Fservice.proto:file:0",
      "isExported": true,
      "kind": "file",
      "name": "service.proto",
      "qualifiedName": "api/service.proto",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'r' keeps consumer-only cross-file targets unresolved while retaining local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
        ],
        "ruleId": "syntax.r.unique-same-file-direct-call",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523entry%3Afunction%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523helper%3Afunction%3A0:calls:2:28",
      "kind": "calls",
      "range": {
        "end": {
          "column": 41,
          "line": 2,
        },
        "start": {
          "column": 28,
          "line": 2,
        },
      },
      "referenceName": "helper",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%3Afile%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523entry%3Afunction%3A0:contains:2:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 43,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
      "referenceName": "entry",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%3Afile%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523helper%3Afunction%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 36,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "helper",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
    },
  ],
  "files": [
    {
      "contentHash": "7daecfdea7266e65464b6d11b76ca72dff04b3e3f2c52e42765821ff50d482ff",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "r",
      "path": "R/entry.R",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
      "isExported": true,
      "kind": "function",
      "name": "entry",
      "qualifiedName": "R/entry.R#entry",
      "range": {
        "end": {
          "column": 43,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
      "isExported": true,
      "kind": "function",
      "name": "helper",
      "qualifiedName": "R/entry.R#helper",
      "range": {
        "end": {
          "column": 36,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "isExported": true,
      "kind": "file",
      "name": "entry.R",
      "qualifiedName": "R/entry.R",
      "range": {
        "end": {
          "column": 1,
          "line": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'r' preserves applicable cross-file and local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
        ],
        "ruleId": "syntax.r.unique-same-file-direct-call",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523entry%3Afunction%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523helper%3Afunction%3A0:calls:2:28",
      "kind": "calls",
      "range": {
        "end": {
          "column": 41,
          "line": 2,
        },
        "start": {
          "column": 28,
          "line": 2,
        },
      },
      "referenceName": "helper",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%3Afile%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523entry%3Afunction%3A0:contains:2:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 43,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
      "referenceName": "entry",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "R/entry.R",
      "id": "edge:symbol%3AR%252Fentry.R%3AR%252Fentry.R%3Afile%3A0:symbol%3AR%252Fentry.R%3AR%252Fentry.R%2523helper%3Afunction%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 36,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "helper",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "targetId": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:R%2Fforeign.R:R%2Fforeign.R%23helper:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "R/foreign.R",
      "id": "edge:symbol%3AR%252Fforeign.R%3AR%252Fforeign.R%3Afile%3A0:symbol%3AR%252Fforeign.R%3AR%252Fforeign.R%2523helper%3Afunction%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 40,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "helper",
      "resolution": "exact",
      "sourceId": "symbol:R%2Fforeign.R:R%2Fforeign.R:file:0",
      "targetId": "symbol:R%2Fforeign.R:R%2Fforeign.R%23helper:function:0",
    },
  ],
  "files": [
    {
      "contentHash": "7daecfdea7266e65464b6d11b76ca72dff04b3e3f2c52e42765821ff50d482ff",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "r",
      "path": "R/entry.R",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "f273e233eca9f9736f014e547793a97c73646f83f2feecfe7dcadfd18ef5cb3c",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "r",
      "path": "R/foreign.R",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R%23entry:function:0",
      "isExported": true,
      "kind": "function",
      "name": "entry",
      "qualifiedName": "R/entry.R#entry",
      "range": {
        "end": {
          "column": 43,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R%23helper:function:0",
      "isExported": true,
      "kind": "function",
      "name": "helper",
      "qualifiedName": "R/entry.R#helper",
      "range": {
        "end": {
          "column": 36,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/entry.R",
      "id": "symbol:R%2Fentry.R:R%2Fentry.R:file:0",
      "isExported": true,
      "kind": "file",
      "name": "entry.R",
      "qualifiedName": "R/entry.R",
      "range": {
        "end": {
          "column": 1,
          "line": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/foreign.R",
      "id": "symbol:R%2Fforeign.R:R%2Fforeign.R%23helper:function:0",
      "isExported": true,
      "kind": "function",
      "name": "helper",
      "qualifiedName": "R/foreign.R#helper",
      "range": {
        "end": {
          "column": 40,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "R/foreign.R",
      "id": "symbol:R%2Fforeign.R:R%2Fforeign.R:file:0",
      "isExported": true,
      "kind": "file",
      "name": "foreign.R",
      "qualifiedName": "R/foreign.R",
      "range": {
        "end": {
          "column": 1,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'sql' keeps consumer-only cross-file targets unresolved while retaining local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
        ],
        "ruleId": "language.sql.structural-v2.create-table",
        "stage": "syntax",
      },
      "filePath": "db/child.sql",
      "id": "edge:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%3Afile%3A0:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.child%3Aresource%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 27,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "public.child",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fchild.sql:db%2Fchild.sql:file:0",
      "targetId": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
    },
  ],
  "files": [
    {
      "contentHash": "2a3889b1f3d71d9349faef291886f051d3d40d3ac1586bdb97f6ee06baa10fe2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "sql",
      "path": "db/child.sql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "db/child.sql",
      "id": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
      "isExported": true,
      "kind": "resource",
      "name": "public.child",
      "qualifiedName": "db/child.sql#sql-structural-v2:table:qualified:public.child",
      "range": {
        "end": {
          "column": 27,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "db/child.sql",
      "id": "symbol:db%2Fchild.sql:db%2Fchild.sql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "child.sql",
      "qualifiedName": "db/child.sql",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`SQL, R, Proto, and GraphQL resolver pre-move parity golden > 'sql' preserves applicable cross-file and local output 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.audit:resource:0",
        ],
        "ruleId": "language.sql.structural-v2.create-table",
        "stage": "syntax",
      },
      "filePath": "db/base.sql",
      "id": "edge:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%3Afile%3A0:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.audit%3Aresource%3A0:contains:2:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 39,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
      "referenceName": "public.audit",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fbase.sql:db%2Fbase.sql:file:0",
      "targetId": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.audit:resource:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
        ],
        "ruleId": "language.sql.structural-v2.create-table",
        "stage": "syntax",
      },
      "filePath": "db/base.sql",
      "id": "edge:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%3Afile%3A0:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.parent%3Aresource%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 40,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "public.parent",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fbase.sql:db%2Fbase.sql:file:0",
      "targetId": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.audit:resource:0",
        ],
        "resolutionPath": [
          "db/child.sql",
          "db/base.sql",
        ],
        "ruleId": "syntax.sql.unique-foreign-key-table",
        "stage": "module",
      },
      "filePath": "db/child.sql",
      "id": "edge:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.child%3Aresource%3A0:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.audit%3Aresource%3A0:references:4:63",
      "kind": "references",
      "range": {
        "end": {
          "column": 75,
          "line": 4,
        },
        "start": {
          "column": 63,
          "line": 4,
        },
      },
      "referenceName": "public.audit",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
      "targetId": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.audit:resource:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
        ],
        "resolutionPath": [
          "db/child.sql",
          "db/base.sql",
        ],
        "ruleId": "syntax.sql.unique-table-inheritance",
        "stage": "module",
      },
      "filePath": "db/child.sql",
      "id": "edge:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.child%3Aresource%3A0:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.parent%3Aresource%3A0:extends:5:13",
      "kind": "extends",
      "range": {
        "end": {
          "column": 26,
          "line": 5,
        },
        "start": {
          "column": 13,
          "line": 5,
        },
      },
      "referenceName": "public.parent",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
      "targetId": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
        ],
        "resolutionPath": [
          "db/child.sql",
          "db/base.sql",
        ],
        "ruleId": "syntax.sql.unique-foreign-key-table",
        "stage": "module",
      },
      "filePath": "db/child.sql",
      "id": "edge:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.child%3Aresource%3A0:symbol%3Adb%252Fbase.sql%3Adb%252Fbase.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.parent%3Aresource%3A0:references:2:32",
      "kind": "references",
      "range": {
        "end": {
          "column": 45,
          "line": 2,
        },
        "start": {
          "column": 32,
          "line": 2,
        },
      },
      "referenceName": "public.parent",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
      "targetId": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
        ],
        "ruleId": "language.sql.structural-v2.create-table",
        "stage": "syntax",
      },
      "filePath": "db/child.sql",
      "id": "edge:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%3Afile%3A0:symbol%3Adb%252Fchild.sql%3Adb%252Fchild.sql%2523sql-structural-v2%253Atable%253Aqualified%253Apublic.child%3Aresource%3A0:contains:1:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 27,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "referenceName": "public.child",
      "resolution": "exact",
      "sourceId": "symbol:db%2Fchild.sql:db%2Fchild.sql:file:0",
      "targetId": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
    },
  ],
  "files": [
    {
      "contentHash": "d02f778c2826ff823d4907f7ac07723dbcb4be93f264c2613d7f05d7b0f57110",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "sql",
      "path": "db/base.sql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "2a3889b1f3d71d9349faef291886f051d3d40d3ac1586bdb97f6ee06baa10fe2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "sql",
      "path": "db/child.sql",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "db/base.sql",
      "id": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.audit:resource:0",
      "isExported": true,
      "kind": "resource",
      "name": "public.audit",
      "qualifiedName": "db/base.sql#sql-structural-v2:table:qualified:public.audit",
      "range": {
        "end": {
          "column": 39,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 2,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "db/base.sql",
      "id": "symbol:db%2Fbase.sql:db%2Fbase.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.parent:resource:0",
      "isExported": true,
      "kind": "resource",
      "name": "public.parent",
      "qualifiedName": "db/base.sql#sql-structural-v2:table:qualified:public.parent",
      "range": {
        "end": {
          "column": 40,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "db/base.sql",
      "id": "symbol:db%2Fbase.sql:db%2Fbase.sql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "base.sql",
      "qualifiedName": "db/base.sql",
      "range": {
        "end": {
          "column": 1,
          "line": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "db/child.sql",
      "id": "symbol:db%2Fchild.sql:db%2Fchild.sql%23sql-structural-v2%3Atable%3Aqualified%3Apublic.child:resource:0",
      "isExported": true,
      "kind": "resource",
      "name": "public.child",
      "qualifiedName": "db/child.sql#sql-structural-v2:table:qualified:public.child",
      "range": {
        "end": {
          "column": 27,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "db/child.sql",
      "id": "symbol:db%2Fchild.sql:db%2Fchild.sql:file:0",
      "isExported": true,
      "kind": "file",
      "name": "child.sql",
      "qualifiedName": "db/child.sql",
      "range": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;
